# backend-api/app/controllers/start_controller.rb
@@ -6,9 +6,9 @@ class StartController < ApplicationController
   def index
     @user = User.new
 
-    @shifts = Shift.paginate(page: params[:page], per_page: 10).order('startdate DESC')
-    @completed_shifts = Shift.paginate(page: params[:completed_page], per_page: 10).order('startdate DESC').where('"enddate" < ?', Time.now)
-    @upcoming_shifts = Shift.paginate(page: params[:upcoming_page], per_page: 10).order('startdate DESC').where('"enddate" > ?', Time.now)
+    @shifts = Shift.paginate(page: params[:page], per_page: 10).order('startTime DESC')
+    @completed_shifts = Shift.paginate(page: params[:completed_page], per_page: 10).order('startTime DESC').where('"endTime" < ?', Time.now)
+    @upcoming_shifts = Shift.paginate(page: params[:upcoming_page], per_page: 10).order('startTime DESC').where('"endTime" > ?', Time.now)
     render json: @shifts
   end
 end
