# backend-api/db/schema.rb
@@ -72,8 +72,8 @@ ActiveRecord::Schema[7.0].define(version: 2022_08_31_190411) do
   create_table "shifts", force: :cascade do |t|
     t.string "name"
     t.text "description"
-    t.datetime "startdate"
-    t.datetime "enddate"
+    t.datetime "startTime"
+    t.datetime "endTime"
     t.integer "shop_id"
     t.string "department"
     t.string "color"
